force-app/main/default/objects/Standard_EI_Covenant_Configuration__mdt/Standard_EI_Covenant_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Standard EI Covenant Configuration</label>
    <pluralLabel>Standard EI Covenant Configs</pluralLabel>
</CustomObject>