force-app/main/default/objects/Standard_EI_Covenant_Configuration__mdt/fields/Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Type__c</fullName>
    <label>Borrower Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
                <default>true</default>
                <label>Borrower</label>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Limited Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Related Entity</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>