force-app/main/default/objects/Standard_EI_Covenant_Configuration__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm RE</fullName>
                <default>true</default>
                <label>Farm RE</label>
            </value>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Non-Owner Occupied CRE</fullName>
            </value>
            <value>
                <fullName>Owner Occupied CRE</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Residential RE</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Development RE</fullName>
            </value>
            <value>
                <fullName>Consumer Residential RE</fullName>
            </value>
            <value>
                <fullName>Consumer Non-Auto</fullName>
            </value>
            <value>
                <fullName>Consumer Auto</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Dealer Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>